# fritz-speech-to-text

./: .gitignore  Dockerfile  README.md  entrypoint.sh  oscreceive.maxpat  pip.conf  pyproject.toml
src/model/: speech_to_text.py
