[tool.poetry]
name = "fritz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[project]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
python-osc = "^1.8.3"
transformers = "^4.36.2"
librosa = "^0.10.1"
sounddevice = "^0.4.6"
numpy = "^1.26.2"
resampy = "^0.4.2"
torch = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transcribe = "src.model.speech_to_text:main"
